<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.radopc.clother.Main"
    android:id="@+id/main_layout"
    android:background="@drawable/backgr"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView_UserEmailMainString"
        android:id="@+id/textView_UserEmailMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/user_email_mainPage"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/editText_UserDataMain"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView_UserEmailMain"
        android:layout_toEndOf="@+id/textView_UserEmailMain"
        android:gravity="center_horizontal"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_WardrobeMain"
        android:id="@+id/button_MyWardrobeMain"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView_UserEmailMain"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_shape"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_RateOutfit"
        android:id="@+id/button_RateOutfit"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/button_TakeOutfitPicture"
        android:layout_alignLeft="@+id/button_TakeOutfitPicture"
        android:layout_alignStart="@+id/button_TakeOutfitPicture"
        android:background="@drawable/btn_shape"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_UploadOutfit"
        android:id="@+id/button_UploadOutfit"
        android:layout_below="@+id/button_MyWardrobeMain"
        android:layout_alignLeft="@+id/button_MyWardrobeMain"
        android:layout_alignStart="@+id/button_MyWardrobeMain"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_shape"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_TakeOutfitPic"
        android:id="@+id/button_TakeOutfitPicture"
        android:layout_below="@+id/button_UploadOutfit"
        android:layout_alignRight="@+id/button_UploadOutfit"
        android:layout_alignEnd="@+id/button_UploadOutfit"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_shape"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:text="@string/btn_LogoutMain"
        android:id="@+id/button_LogOut"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_shape"/>
</RelativeLayout>


