<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.radopc.clother.Camera"
    android:background="@drawable/backgr">


    <ImageView
        android:layout_width="340dp"
        android:layout_height="350dp"
        android:id="@+id/imageView_PhotoPreview"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/btn_AddTag_CameraActivity"
        android:id="@+id/button_AddTag_cameraActivity"
        android:layout_below="@+id/imageView_PhotoPreview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_shape"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_TakeOutfit_CameraActivity"
        android:id="@+id/button_TakeOutfit_cameraActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView_PhotoPreview"
        android:layout_alignStart="@+id/imageView_PhotoPreview"
        android:background="@drawable/btn_shape"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_UploadOutfit_CameraActivity"
        android:id="@+id/button_UploadOutfit_cameraActivity"
        android:layout_alignTop="@+id/button_TakeOutfit_cameraActivity"
        android:layout_alignRight="@+id/imageView_PhotoPreview"
        android:layout_alignEnd="@+id/imageView_PhotoPreview"
        android:background="@drawable/btn_shape"
        />
</RelativeLayout>
