<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.radopc.clother.Register">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Register"
        android:id="@+id/textView_RegisterTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:typeface="serif"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_enterEmail"
        android:layout_below="@+id/textView_RegisterTitle"
        android:layout_alignLeft="@+id/textView_RegisterTitle"
        android:layout_alignStart="@+id/textView_RegisterTitle"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_enterEmail"
        android:id="@+id/textView_EnterEmail"
        android:layout_below="@+id/editText_enterEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_EnterPassword"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editText_enterEmail"
        android:layout_alignStart="@+id/editText_enterEmail"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_EnterPassword"
        android:id="@+id/textView_EnterPassword"
        android:layout_below="@+id/editText_EnterPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_ConfirmPassword"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/textView_EnterPassword"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_ConfirmPassword"
        android:id="@+id/textView_ConfirmPassword"
        android:layout_below="@+id/editText_ConfirmPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_Confirm"
        android:id="@+id/button_Confirm"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView_ConfirmPassword"
        android:layout_toEndOf="@+id/textView_ConfirmPassword"
        android:background="@drawable/btn_shape"/>
</RelativeLayout>
